services/core-services/dns/resources/powerdns-admin/deployment-powerdns-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-admin
  namespace: dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns-admin
  template:
    metadata:
      labels:
        app: powerdns-admin
    spec:
      containers:
        - name: powerdns-admin
          image: powerdnsadmin/pda-legacy:v0.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9191
              name: http
          volumeMounts:
            - mountPath: /data
              name: powerdns-admin

      volumes:
        - name: powerdns-admin
          persistentVolumeClaim:
            claimName: powerdns-admin
