services/core-services/dns/resources/powerdns-admin/service-powerdns-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-admin
  namespace: dns
spec:
  ports:
    - name: http
      port: 9191
      targetPort: http
  selector:
    app: powerdns-admin
