services/core-services/dns/resources/powerdns-admin/ingress-powerdns-admin.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: powerdns-admin
  namespace: dns
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`dns.nebulanet.xyz`)
      kind: Rule
      services:
        - name: powerdns-admin
          kind: Service
          port: http
  tls:
    secretName: powerdns-admin-tls
